--- a/web/WEB-INF/templates/loadThesaurus.vm
+++ b/web/WEB-INF/templates/loadThesaurus.vm
@@ -69,7 +69,9 @@ Paramètres:
 							#if( $lastUpdate )
 					        	(dernière mise à jour&nbsp;: $esc.html($date.format("long", null, $lastUpdate, $locale)))
 							#end
-							<button name="deleteScheme" value="$esc.html($item.Uri)" title="Supprimer le référentiel &quot;$esc.html($item.getLabel($locale).value)&quot;" onclick="return Referentiel_ConfirmDeletion(&quot;$esc.html($esc.javascript($item.getLabel($locale).value))&quot;);">Supprimer</button>		
+							<a href="${baseUri}/admin/delete?scheme=$esc.url($item.Uri)" class="button" 
+								title="Supprimer le référentiel &quot;$esc.html($item.getLabel($locale).value)&quot;"  
+								onclick="return Referentiel_ConfirmDeletion(&quot;$esc.html($esc.javascript($item.getLabel($locale).value))&quot;);">Supprimer</a>
 				        </li>
 					#end
 					</ul>
