--- a/web/css/principal.css
+++ b/web/css/principal.css
@@ -126,9 +126,17 @@ body#ThesaurusW {
 	-moz-column-gap: 50px;
 	-webkit-column-count: 3;
 	-webkit-column-gap: 50px;
+	-ms-column-count: 3;
+	-ms-column-gap: 50px;
+	column-count: 3;
+	column-gap: 50px;
 	width: 100%;
 	padding-left: 20px;
 	padding-right: 0;
+	list-style: none;
+}
+#ThesaurusW #topConceptList, #ThesaurusW #conceptGroupList {
+	list-style: none;
 }
 
 #footer {
