--- a/web/WEB-INF/templates/concept.vm
+++ b/web/WEB-INF/templates/concept.vm
@@ -84,7 +84,7 @@ Paramètres:
 				</div>
 				#linked_entries( $text.property.topAncestor   	$it.getTopAncestors()   $locale "right" )
 				#show_single_property_as_date( $text.property.created         $it.createdDate      "long"      $locale )
-				#show_single_property_as_date( $text.property.modified         $$it.modifiedDate      "long"      $locale )
+				#show_single_property_as_date( $text.property.modified         $it.modifiedDate      "long"      $locale )
 		    	#label_entries( $text.property.conceptGroups 	$it.getConceptGroups()   $locale "right")
 				#show_property( $text.property.definition 	$it.getProperties($prefixes.expandUri("skos:definition"))   $locale "right")
 				#show_property( $text.property.historyNote    	$it.getProperties($prefixes.expandUri("skos:historyNote"))  $locale	"right")
