--- a/web/WEB-INF/templates/contact.vm
+++ b/web/WEB-INF/templates/contact.vm
@@ -86,16 +86,20 @@ Paramètres:
 		
 				<input type="hidden" name="check" />
 		
-				<p class="form-item from"><label for="from">$esc.html($text.contact.from)</label>
+				<p class="form-item from"><label for="from">$esc.html($text.contact.from)
+				<span class="required">*</span></label>
 				<input type="text" name="from" value="$from" /></p>
 				
-				<p class="form-item name"><label for="name">$esc.html($text.contact.name)</label>
+				<p class="form-item name"><label for="name">$esc.html($text.contact.name)
+				<span class="required">*</span></label>
 				<input type="text" name="name" value="$name" /></p>
 				
-				<p class="form-item subject"><label for="subject">$esc.html($text.contact.subject)</label>
+				<p class="form-item subject"><label for="subject">$esc.html($text.contact.subject)
+				<span class="required">*</span></label>
 				<input type="text" name="subject" value="$subject" /></p>
 				
-				<p class="form-item message"><label for="message">$esc.html($text.contact.message)</label>
+				<p class="form-item message"><label for="message">$esc.html($text.contact.message)
+				<span class="required">*</span></label>
 				<textarea name="message">$message</textarea></p>
 				
 				<p class="form-item copy"><label for="copy">$esc.html($text.contact.copy)</label>
