Correction du titre en italic sur les termes non préférentiels.

--- a/web/css/principal.css
+++ b/web/css/principal.css
@@ -219,7 +219,7 @@ body#ThesaurusW {
 .vedette,.kvVedette li {
 	text-transform: uppercase;
 }
-.non-pref {
+.non-pref ul {
 	font-style: italic;
 }
 
